<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jpage</groupId>
    <artifactId>AndroidDeviceManager</artifactId>
    <version>${maven.build.timestamp}</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.build.timestamp.format>yy.MM.dd.HHmm</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <!-- flat icons -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>2.6</version>
        </dependency>
        <!-- logging to file -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <!-- GSON serializer -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
        </dependency>
        <!-- better image scaling -->
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.17</version>
        </dependency>
        <!-- flexible layouts - https://mvnrepository.com/artifact/com.miglayout/miglayout -->
        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout</artifactId>
            <version>3.7.4</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core -->
        <dependency>
            <groupId>com.github.jai-imageio</groupId>
            <artifactId>jai-imageio-core</artifactId>
            <version>1.4.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <finalName>AndroidDeviceManager</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.jpage4500.devicemanager.MainApplication</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <mainClass>com.jpage4500.devicemanager.MainApplication</mainClass>
                </configuration>
            </plugin>
            <!-- create native MacOS app from jar -->
            <plugin>
                <groupId>de.perdian.maven.plugins</groupId>
                <artifactId>macosappbundler-maven-plugin</artifactId>
                <version>1.19.0</version>
                <configuration>
                    <plist>
                        <CFBundleIconFile>resources/device-manager.icns</CFBundleIconFile>
                        <JVMMainClassName>com.jpage4500.devicemanager.MainApplication</JVMMainClassName>
                        <CFBundleDisplayName>Android Device Manager</CFBundleDisplayName>
                        <CFBundleDevelopmentRegion>English</CFBundleDevelopmentRegion>
                        <CFBundleTypeExtensions>
                            <string>apk</string>
                        </CFBundleTypeExtensions>
                    </plist>
                    <jdk>
                        <!-- set to true to package entire JRE (NOTE: resulting app won't be compatible with both arm and x86 macs)-->
                        <include>false</include>
                        <!--<location>/Applications/Android Studio Preview.app/Contents/jbr/Contents/Home</location>-->
                    </jdk>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
